# heimdex-for-livecommerce-dev

./: .dockerignore  .gitignore  .stop-guard-ignore  Makefile  README.md  docker-compose.onprem.yml  docker-compose.override.yml  docker-compose.release.yml  docker-compose.yml  elasticmq.conf
services/api/: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
services/api/app/: config.py  dependencies.py  main.py  protocols.py  seed.py  sqs_producer.py
services/api/app/cli/: backfill.py  backfill_colors_direct.py  backfill_face_thumbnails_to_s3.py  backfill_image_caption_batch.py  backfill_spoken_aliases.py  cleanup_shorts_renders.py  export_analytics.py  export_worker_events.py  requeue_face_detection.py  requeue_stale_renders.py
services/api/app/commands/: cleanup_renders.py
services/api/app/db/: base.py  models.py
services/api/app/db/migrations/: env.py
services/api/app/lib/: internal_auth.py  rollout.py
services/api/app/lib/product_track/: __init__.py  alignment.py  config.py  stitching.py  subset_selector.py  window_assembly.py
services/api/app/lib/subtitle_chunking/: __init__.py  chunker.py  word_to_subtitle.py
services/api/app/lib/whisper_transcribe/: __init__.py  budget.py  client.py  schemas.py
services/api/app/modules/: content_type.py
services/api/app/modules/agent_intents/: models.py  rate_limit.py  repository.py  router.py  schema_check.py  schemas.py
services/api/app/modules/auth/: dependencies.py  oidc.py  router.py  schemas.py  service.py
services/api/app/modules/basket/: models.py  repository.py  router.py  schemas.py
services/api/app/modules/blur/: __init__.py  export_internal_router.py  export_repository.py  export_service.py  internal_router.py  models.py  rate_limit.py  repository.py  router.py  schemas.py  (+1 more)
services/api/app/storage/: s3.py
services/api/docs/: SEARCH_CONTRACT.md
services/api/scripts/: backfill_title_text.py  eval_live_block_filter.py  eval_ocr_rerank.py  eval_shorts_auto_llm.py  eval_storyboard.py  reembed_scenes.py  reindex_v3_to_v4.py  repair_scene_manifest_and_requeue_stt.py  reprocess_pipeline.py  reprocess_stt.py  run_search_eval.py  test_inventory.py  verify_composition_fonts.py
services/api/tests/: conftest.py  core_test_files.txt  test_agent_intents.py  test_alias_migration.py  test_auth_security.py  test_blur_repository.py  test_blur_schemas.py  test_blur_service.py  test_browse_content_type.py  test_build_embedding_text.py  test_caption_enrichment.py  test_chunk_dominance.py  test_claim_priority.py  test_cleanup_renders.py  test_closed_vocab_startup.py  test_color_extraction.py  test_composition_adapter.py  test_config.py  test_content_type.py  test_content_type_filter.py  test_cors.py  test_create_scan_order_video_id_resolution.py  test_db_lifecycle.py  test_dev_refresh.py  test_device_heartbeat.py  test_device_pairing.py  test_device_registration.py  test_discovery_image_filter.py  test_drive_config.py  test_drive_enrichment.py  test_drive_folder_connection_router.py  test_drive_oauth_scope.py  test_drive_rbac.py  test_drive_s3.py  test_drive_scene_pipeline.py  test_drive_schemas.py  test_drive_sync.py  test_drive_transcode.py  test_drive_worker_discover_incremental.py  test_edl.py  (+160 more)
services/api/tests/fixtures/: golden_queries.yaml
services/drive-caption-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-caption-worker/src/: worker.py
services/drive-caption-worker/src/tasks/: caption.py
services/drive-caption-worker/tests/: test_caption_batching.py
services/drive-ocr-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-ocr-worker/src/: worker.py
services/drive-ocr-worker/src/tasks/: ocr.py
services/drive-ocr-worker/tests/: test_ocr_batching.py
services/drive-reranker-worker/: Dockerfile.gpu  pyproject.toml
services/drive-reranker-worker/src/: server.py
services/drive-reranker-worker/tests/: test_server.py
services/drive-transcode-worker/: Dockerfile.gpu  pyproject.toml
services/drive-transcode-worker/src/: structured_logging.py  worker.py
services/drive-transcode-worker/src/tasks/: transcode.py
services/drive-transcode-worker/tests/: test_audio_extraction_gate.py  test_build_piggyback_cmd.py  test_scene_pipeline_import_surface.py  test_try_nvenc_piggyback.py
services/drive-visual-embed-worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
services/drive-visual-embed-worker/src/: worker.py
services/drive-visual-embed-worker/src/tasks/: visual_embed.py
services/drive-worker/: Dockerfile  pyproject.toml
services/drive-worker/src/: worker.py
services/drive-worker/src/tasks/: discover.py  export.py  image_metadata.py  process.py  resplit.py  scene_split.py
services/drive-worker/tests/: test_discover_watched_folders.py
services/shorts-render-worker/: Dockerfile  fonts.conf  pyproject.toml
services/shorts-render-worker/fonts/: OFL-LICENSE.txt
services/shorts-render-worker/scripts/: download-fonts.sh
services/shorts-render-worker/src/: message_adapter.py  worker.py
services/shorts-render-worker/src/tasks/: render.py
services/shorts-render-worker/tests/: test_message_adapter.py  test_render.py  test_render_logging.py  test_worker.py
services/worker/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/worker/scripts/: run_face_presence.py  run_identity_template.py
services/worker_sdk/: pyproject.toml
services/worker_sdk/src/heimdex_worker_sdk/: __init__.py  aircloud_client.py  drive_keys.py  gpu_orchestrator.py  internal_api.py  message_adapters.py  s3.py  settings.py  sqs_client.py  youtube_api.py
services/worker_sdk/tests/: test_drive_keys.py  test_gpu_orchestrator.py  test_internal_api.py  test_s3.py  test_settings.py  test_sqs_client.py  test_youtube_api.py
services/youtube-worker/: Dockerfile  pyproject.toml
services/youtube-worker/src/: config.py  worker.py
services/youtube-worker/src/tasks/: cleanup.py  download.py  enumerate.py  subtitle_parser.py
services/youtube-worker/tests/: conftest.py  test_cleanup.py  test_download.py  test_enumerate.py  test_subtitle_parser.py
(+995 files in other folders)
