[project]
name = "heimdex-api"
version = "0.1.0"
description = "Heimdex Cloud Control Plane API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "opensearch-py[async]>=2.4.2",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "tenacity>=8.2.3",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "heimdex-media-contracts>=0.14.0",
    "heimdex-worker-sdk>=0.3.3",
    "pgvector>=0.3.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
]

[tool.uv.sources]
heimdex-media-contracts = { path = "../../../heimdex-media-contracts" }

[project.optional-dependencies]
analytics = [
    "pyarrow>=14.0.0",
    "google-cloud-bigquery>=3.25.0",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
