[project]
name = "heimdex-drive-caption-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
    "transformers==4.44.2",
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "einops>=0.7",
    "timm>=0.9",
    "heimdex-media-contracts>=0.6.0",
    "heimdex-media-pipelines[vision]>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
