[project]
name = "heimdex-drive-ocr-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
