[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "heimdex-drive-transcode-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "heimdex-worker-sdk>=0.1.0",
    "heimdex-media-contracts>=0.7.0",
    "heimdex-media-pipelines>=0.6.0",
    "boto3>=1.34",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
]
