[project]
name = "heimdex-drive-visual-embed-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
    "transformers>=4.49.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
