[project]
name = "heimdex-drive-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
    "Pillow>=10.0",
    "heimdex-media-contracts>=0.5.0",
    "heimdex-media-pipelines>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
