[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "heimdex-shorts-render-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "heimdex-worker-sdk>=0.1.0",
    "heimdex-media-contracts>=0.12.0",
    # heimdex-media-pipelines is volume-mounted in dev/staging/prod and
    # pip-installed --no-deps at container start (see docker-compose.yml).
    # The 0.12.3+ release wires bake_overlay_png into render_composition
    # for V2 overlays; older pipelines silently skip the new field.
    "heimdex-media-pipelines>=0.12.3",
    "boto3>=1.34",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "requests>=2.31",
]
