[project]
name = "heimdex-youtube-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.0",
    "requests>=2.31",
    "boto3>=1.34",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
